# smartlibs

./: .gitignore  logging.yml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish.yml
auto_tasks/: tasks.yml  test.yml
auto_tasks/aaas/: aaas_task.py
auto_tasks/gpu/: GpuTool.py  __utils.py  cuda_tool.py
auto_tasks/jsonl/: jsonl_file.py
auto_tasks/lib/: auto.py
auto_tasks/redis/: RedisQueue.py  __utils.py  redis_pip.py  redis_utils.py
auto_tasks/tools/: batch.py  item_tool.py  t_pager.py  t_print.py  t_statefile.py  t_tool.py
docs/: ai_talk.md
smart/: __init__.py
smart/aaas/: Runner.py  __init__.py  __logger.py  auto_manage.py  base.py  client.py  config.py  process_pool.py  run.py  run_debug.py  wsgi.py
smart/auto/: Runner.py  __init__.py  __logger.py  base.py  constants.py  meta.py  run.py  run_debug.py  tree.py
smart/evals/: __init__.py  __logger.py
smart/rest/: __init__.py  __logger.py  base.py  base_req.py  main.py
smart/utils/: __init__.py  __logger.py  base.py  bound.py  cast.py  config.py  dag.py  dict.py  dot_path.py  env.py  func.py  inspect.py  item.py  iter.py  json.py  jsonl.py  list.py  loader.py  log.py  number.py  path.py  process.py  ratio.py  remote_debug.py  retry.py  serialize.py  signal.py  template.py  thread.py  tuple.py  yaml.py
starter/aaas/: client.yml  guid.py  server.yml
starter/helloworld/: __init__.py  auto.yml  bind_obj.py  cfg_hook.py  example.yml  example_task.py  func_task.py  (+2 more)
tests/: __init__.py  __test_template.py  auto_configs.yml  configs.py  smart_env.yml  test.md
(+200 files in other folders)
